Fixed Carousel button bug if item list is too short. Changed some styles

--- a/ClientApp/src/components/AccountForm/AccountForm.css
+++ b/ClientApp/src/components/AccountForm/AccountForm.css
@@ -9,13 +9,12 @@
 .account-form-logo {
     position: absolute;
     margin: 2rem;
-}
-.account-form-logo-short {
-    display: none;
+    top: 0;
 }
 .account-form {
     align-self: center;
-    background-color: rgba(0,0,0,0.95);
+    background-color: rgba(0,0,0,0.8);
+    box-shadow: 0 0 2px 2px black;
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -29,6 +28,7 @@
 .account-form-title {
     color: white;
     font-size: 2rem;
+    font-weight: normal;
     margin: 2rem 0;
 }
 .account-form-error {
@@ -86,9 +86,5 @@
 @media (max-height: 750px) {
     .account-form-logo {
         display: none;
-    }
-    .account-form-logo-short {
-        display: flex;
-        justify-content: center;
     }
 }
